update README.md with details of building and running with Thorntail locally, as an app on OpenShift, as a job from oc command line, and as a cron job from oc command line.